services/api-gateway/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: agentic
  annotations:
    cloud.google.com/backend-config: '{"default": "api-gateway-backend-config"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: api-gateway
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
